Update src/main/java/uk/gov/digital/ho/hocs/casework/api/CaseDataResource.java
Co-authored-by: Liam MacPherson <11508628+LiamMacP@users.noreply.github.com>